# qrdic

./: CMakeLists.txt  README.md  binaryDistortion.hpp  detectqr.cpp  dictoolbox.hpp  genqr.cpp
